--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,8 @@
 # HTTP Server
 server {
   listen       80;
-  server_name  jericho;
+  # TODO Change server_name from _ to your domain name (ex. example.com). For more information visit: http://nginx.org/en/docs/http/server_names.html
+  server_name  _;
 
   # --------------
   # gzip settings
@@ -17,11 +18,12 @@ server {
   gzip_types *;
   # --------------
 
-  # path for AWS ELB health check
+  # ping path for health checks
   if ($request_uri = /health) {
     return 200;
   }
 
+  # Force all traffic to https
   if ($http_x_forwarded_proto = http) {
     return 301 https://$host$request_uri;
   }
@@ -30,33 +32,5 @@ server {
 
   location / {
     try_files $uri /index.html;
-  }
-
-  location /internal {
-    try_files $uri /internal/index.html;
-  }
-
-  location /api/v1/ {
-    proxy_pass %API_URL%/api/v1/;
-  }
-
-  location /campaign/ {
-    proxy_set_header X-Origin-Host $host;
-    proxy_pass %API_URL%/render/campaign/;
-  }
-
-  location /project/ {
-    proxy_set_header X-Origin-Host $host;
-    proxy_pass %API_URL%/render/recruitment/;
-  }
-  
-  location /assets/ {
-    proxy_pass %API_URL%/assets/;
-  }
-
-  # redirect server error pages to the static page /50x.html
-  error_page   500 502 503 504  /50x.html;
-  location = /50x.html {
-    root   /usr/share/nginx/html;
   }
 }
