--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "version": "0.0.1",
   "description": "",
   "scripts": {
-    "start": "webpack-dev-server --history-api-fallback --inline --progress",
-    "build": "webpack --config --bail -p --progress --production"
+    "start": "webpack-dev-server --history-api-fallback --inline --progress --port=8080",
+    "build": "webpack --config --bail -p --progress --production && docker build -t user/image:version ."
   },
   "repository": {
     "type": "git",
