--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "dependencies": {
     "angular": "~1.5.0",
+    "angular-json-tree": "^1.0.1",
     "angular-resource": "~1.5.0",
     "angular-ui-router": "~0.3.1",
     "autoprefixer": "~6.3.3",
