--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "html-loader": "~0.4.0",
     "html-webpack-plugin": "~1.7.0",
     "ng-annotate-loader": "^0.1.1",
+    "ng-promise-buttons": "^1.0.2",
     "ngtemplate-loader": "^1.3.1",
     "node-libs-browser": "~0.5.3",
     "node-sass": "~3.8.0",
